# brain-tumor-resnet50-hpc-benchmark

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: config.yaml
data/: README.md
docs/: experiment_tracking.md  model_card.md  project_report.md  resume_bullets.md  reviewer_notes.md  runbook.md  upload_checklist.md
images/: README.md
notebooks/: README.md
reports/metrics/: hardware_results.csv  training_history_cpu.csv  training_history_gpu.csv
scripts/: check_data.py  evaluate.py  make_visualisations.py  train.py
src/brain_tumor_hpsc/: __init__.py  config.py  data.py  metrics.py  model.py  predict.py  visualization.py
tests/: test_data.py  test_metrics.py
