[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-tumor-hpsc"
version = "0.1.0"
description = "ResNet50 brain tumor classifier with CPU vs GPU benchmark reporting."
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "Saneeth Sunkari, Bindhu Saahithi, Syed Zeeshan Ahan" }
]
dependencies = [
  "streamlit==1.41.1",
  "numpy==1.26.4",
  "pandas==2.2.3",
  "matplotlib==3.9.4",
  "scikit-learn==1.6.0",
  "Pillow==11.0.0",
  "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/*.py" = ["E402", "I001"]
"scripts/*.py" = ["E402", "I001"]
